--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "𝐈𝛕ᷟ͢𝚣⃪ꙴ ⋆‌⃝ǫᴜᴇᴇɴ𓃭 ⃟ᴍᴜsɪᴄ⛦⃕͜༆",
-    "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://te.legra.ph/file/7753e6b9852ea5c7ef074.jpg",
+    "name": "𝐋𝐔𝐂𝐈𝐅𝐄𝐑",
+    "description": "A 𝐋𝐔𝐂𝐈𝐅𝐄𝐑 Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
+    "logo": "https://telegra.ph/file/75a0dee096c4570c57135.jpg",
     "keywords": [
     "python3",
     "telegram",
